--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
             <ul class="approaching">
                 <li>Phone: 678-698-5370</li>
                 <li>You can reach me through my <a href ="https://github.com/Luffykun20">GitHub</a></li>
-                <li>Also, you can contact me through my e-mail <a href ="mailto:cristhian_georgia_20@hotmail.com">cristhian_georgia_20@hotmail.com</a> if you have any question.</li>
+                <li>Also, you can contact me through my e-mail <a href ="mailto:cristhian_georgia_20@hotmail.com">cristhian_georgia_20@hotmail.com</a>
+                     if you have any question.</li>
             </ul>
         </section>
     </article>
